Make network a config variable for testing on ropsten; fix SyntaxError: Illegal continue statement: no surrounding iteration statement in hunter.js; move web3 instantiations into main(); corrections in README.ms;

--- a/sample.config.json
+++ b/sample.config.json
@@ -1,5 +1,6 @@
 {
         "infura":"",
+        "network":"ropsten",
         "TBTCAddress":"",
         "courtesyTimeout":21600,
         "signatureTimeout":7200,
