--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "got": "^11.1.4",
     "web3": "^1.2.0",
     "web3-provider-engine": "^15.0.7"
+  },
+  "devDependencies": {
+    "pino": "^6.3.2",
+    "pino-pretty": "^4.0.0"
   }
 }
